  * Added localization for Spanish, thanks to Juan Antonio Pastor Sánchez for the contribution!
  * to continue to use the search using GraphDB v9.9.0+ it is necessary to add the lucene-fts-plugin folder and wars in the plugin folder in GraphDB
  * fixed a bug in the search on a GraphDB containing an Apostrophe or a \
  * fixed a bug in GlobalSearch about concurrent write access to the indexes
  * added the use of the annotation SubPropertyOf in the services SKOS/addBroaderConcept and SKOS/addTopConcept
  * updated Karaf to version 4.2.15, which uses Pax Logging 1.11.13 upgrading to log4j 2.17.1 (and slf4j 1.7.32),
    fixing log4j CVE-2021-44228, CVE-2021-45105, CVE-2021-44832 and logback CVE-2021-42550 issues
  * updated dependency on Apache sshd 2.5.1
  * updated dependency on Sheet2RDF 4.2.3
  * updated dependency on Coda 1.7.4

version 10.1.1
date: 28/10/2021
  * added localization for French, thanks to Nathalie Vedovotto for the contribution!
  * fixed a bug that caused issues when registering a user with ' character into the email address, or any other value provided in the registration form
  * updated the function that names the STData/users/<user> and STData/pu_bindings/<proj>/<user>/ directories
  * fixed a bug regarding the Manchester Syntax Expressions
  * fixed a bug regarding the fuzzy search on a remote dataset
  * fixed bug in the showing oh the history entries
  * minor bugfixes
  * updated dependency on RDF4J 3.7.3 (which fixed thread leak issues in the HTTPRepository)
  * updated dependency on Sheet2RDF 4.2.2
  * updated dependency on Coda 1.7.3
  * updated dependency on MAPLE 0.0.9
  * updated dependency on Lime 0.4.3

version 10.1
date: 21/09/2021
  * when deleting a (plain) conceptualization/lexicalization, its reification through a sense is deleted as well
  * removed deprecated configuration settings for SHACL
  * generalized the support for EU-Login to SAML